# HartreeFock_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basis_set.cpp  basis_set.hpp  common.hpp  default.hpp  grid.cpp  grid.hpp  gto.cpp  gto.hpp  gto_eval.cpp  gto_eval.hpp  hf.cpp  hf.hpp  lebedev_194.h  lebedev_grid.h  math_helper.hpp  orbitals.cpp  orbitals.hpp  system.cpp  system.hpp
Core/: CMakeLists.txt  Core.hpp  Definition.hpp  GaussBasis.cpp  GaussBasis.hpp  System.hpp  WaveFunction.hpp  math_helper.hpp
driver/: CMakeLists.txt  main.cpp
driver/example/: HeH.inp  HeH.xyz  ch3.inp  ch3.xyz  ethane.inp  methane.inp  methane.xyz
example/: CMakeLists.txt  ch4.cpp  ch4_dft.cpp  main.cpp
libGaussEval/: CMakeLists.txt  libGaussEval.cpp  libGaussEval.hpp  libGaussUtilFunc.hpp
solver/: CMakeLists.txt  basis_set.cpp  basis_set.hpp  default.hpp  gto_eval.cpp  gto_eval.hpp  hf.cpp  hf.hpp  hf_solver.hpp  orbitals.cpp  orbitals.hpp  system.hpp
solver/example/: .gitignore  CMakeLists.txt  main.cpp
solver/test/: test_HeHplus.cpp  test_hydrogen.cpp
test/: CMakeLists.txt  boys_func_test.cpp  integral_test.cpp  overlap_integral_test.cpp  test_HeHplus.cpp  test_ch4.cpp  test_common.hpp  test_hydrogen.cpp
